--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ header {
   position: absolute;
   top: 28px;
   right: 40px;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .logout-btn:hover {
@@ -181,6 +181,31 @@ header {
   color: #ff0000;
   box-shadow: 0 0 25px #ff0000ee;
 }
+
+.read-more-btn {
+  background: #ff0000;
+  color: #fff;
+  padding: 15px 35px;
+  border-radius: 35px;
+  font-weight: 800;
+  font-size: 16px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  box-shadow: 0 0 15px #ff0000aa;
+  transition: all 0.3s ease;
+
+  /* Force move the button down */
+  position: relative;
+  top: 20px; /* Adjust this value as needed */
+}
+
+
+.read-more-btn:hover {
+  background: #000;
+  color: #ff0000;
+  box-shadow: 0 0 25px #ff0000ee;
+}
+
 
 /* View More Button */
 .view-more-btn {
@@ -300,8 +325,8 @@ header {
 
   /* Smaller nav links on mobile */
   .nav-links li a {
-    font-size: 15px;
-    text-transform: none; /* Remove uppercase text */
+    font-size: 12px !important; /* Force the font size to be 15px */
+    text-transform: none !important; /* Ensure no uppercase text */
   }
 
   /* Adjust logout button on mobile */
@@ -361,6 +386,7 @@ header {
   }
 }
 
+/* Footer */
 footer {
   padding: 20px 0;
   font-size: 14px;
